# posthog-wasm

./: .gitignore  Cargo.toml  Example.cs  README.md
dotnet/: JsonSerializationHelper.cs  Program.cs  WasmClient.cs  dotnet.csproj  posthog_wasm.wasm
go/: client.go  go.mod  main.go
node-ts/: README.md  package.json
node-ts/src/: index.ts  wasm.ts
rust/: Cargo.toml
rust/src/: client.rs  lib.rs
src/: lib.rs
