[package]
name = "posthog-wasm"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly library for PostHog"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
wee_alloc = "0.4.5"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
