[package]
name = "posthog-wasm"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly library for PostHog"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
opt-level = "s"
lto = true
